[VAS-826] feat: Updated to satisfy change requests
